--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,12 +1,12 @@
 body {
-  padding-top: 50px;
+  	padding-top: 50px;
+  	font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 13px;
 }
 
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
+li {
+    list-style: none;
 }
-
 
 a,input {
     color: #111;
@@ -65,4 +65,119 @@ a.btn2:hover {
 
 .no-padd {
 	padding : 0px !important;
+}
+
+#areaMenu {
+	min-height: 500px;
+	
+}
+
+#areaMenu > ul > li {
+    padding: 10px 0;
+}
+
+#areaMenu > ul > li:first-child {
+    padding: 20px 0 10px;
+}
+
+#areaMenu > ul > li > a {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 14px;
+    color: #111;
+    letter-spacing: 2px;
+    font-family: 'Roboto',"Nanum Gothic",Gulim,sans-serif;
+}
+
+.qtrans_flag_en {
+    background: url(/img/en.png) no-repeat;
+}
+
+.qtrans_flag_th {
+    background: url(/img/th.png) no-repeat;
+}
+
+.qtrans_flag_and_text {
+	margin-top: 14px;
+	width: 20px;
+}
+
+.swiper-paralax-container {
+	width: 100%;
+	height: 100%;
+	background: #000;
+}
+.swiper-slide {
+	font-size: 18px;
+	color:#fff;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 40px 60px;
+}
+.parallax-bg {
+	position: absolute;
+	left: 0;
+	top: 40px;
+	width: 130%;
+	height: 100%;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: center;
+}
+.swiper-slide .title {
+	font-size: 41px;
+	font-weight: 300;
+}
+.swiper-slide .subtitle {
+	font-size: 21px;
+}
+.swiper-slide .text {
+	font-size: 14px;
+	max-width: 400px;
+	line-height: 1.3;
+}
+
+
+.logo-img {
+	max-width:70px;
+}
+
+.pd10 {
+	padding: 10px;
+}
+
+.pd20 {
+	padding: 20px;
+}
+
+.pdt10 {
+	padding-top: 10px;
+}
+
+.pdlr10 {
+	padding: 0 10px;
+}
+
+.pdlr20 {
+	padding: 0 20px;
+}
+
+.mgr10 {
+	margin-right: 10px;
+}
+
+.mgt60 {
+	margin-top: 60px;
+}
+
+@media (max-width: 767px) {
+	
+	.logo {
+		border-bottom: 1px solid #e5e5e5;
+	}
+
+    .logo img {
+		margin: 5px auto;
+		max-width: 50px;
+	}	
 }
