--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -14,7 +14,9 @@ header{
 .navbar {
 	height: 40px;
 	min-height: 40px; 
+	margin-bottom: 0px;
 }
+
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav a, .navbar-inverse .navbar-nav>.open>a {
 	height: 40px;
@@ -81,6 +83,7 @@ header{
 	.navbar-offcanvas {
 		background: #fff;
 	}
+
 }
 
 
@@ -91,6 +94,28 @@ header{
   .navbar {
     border: none;
   }
+
+	#fixoHeader {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		z-index: 200;
+	}
+
+}
+
+@media screen and (max-width: 480px)  
+{
+    nav.navbar
+    {
+		position: fixed;
+		right: 0;
+		left: 0;
+		top: 0;
+		z-index: 1030;
+		width: 100%;
+    }   
 }
 
 
@@ -120,6 +145,10 @@ header{
 	display: block;
 }
 
+.fl a {
+	height: 20px;
+}
+
 header .inner li {
 	float: left;
 	margin-left: 17px;
@@ -133,8 +162,12 @@ header .inner li a {
     font-size: 17px;
     letter-spacing: 1px;
     padding: 0 5px;
-	height: 40px;
+	
 	color: #747474;
+}
+
+header .inner li a.txt{
+	height: 40px;
 }
 
 
@@ -146,4 +179,12 @@ header .inner li a {
 	font-weight: 400;
 	font-size: 10px;
 	letter-spacing: 1px;
+}
+
+
+#fixoHeader {
+	left: 0;
+	top: 0;
+	width: 100%;
+	z-index: 200;
 }
