--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -15,6 +15,11 @@ header{
 	height: 40px;
 	min-height: 40px; 
 	margin-bottom: 0px;
+	border-radius: 0px; 
+}
+
+.navbar-inverse {
+	border-radius: 0px; 
 }
 
 
@@ -82,6 +87,10 @@ header{
 	
 	.navbar-offcanvas {
 		background: #fff;
+	}
+
+	.navbar {
+		border-radius: 0px; 
 	}
 
 }
