--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -104,6 +104,43 @@ a.btn2:hover {
     font-family: 'ee88-rg', sans-serif;
 }
 
+
+.form-control {
+	font-size: 18px;
+}
+
+.btn {
+	font-size: 18px;
+	padding: 10px 20px;
+	font-weight: 700;
+	letter-spacing: 2px;
+}
+
+.btn-black {
+    background-color: #111;
+	border: 1px solid #111;
+	color: #fff;
+}
+
+.btn-black:hover {
+	border: 1px solid #666;
+    background: #666;
+	color: #fff;
+}
+
+.btn-white {
+    background-color: #fff;
+	border: 1px solid #111;
+	color: #111;
+}
+
+.btn-white:hover {
+	border: 1px solid #666;
+    background: #fff;
+	color: #666;
+}
+
+
 .qtrans_flag_en {
     background: url(/img/en.png) no-repeat;
 }
@@ -510,14 +547,14 @@ a.btn2:hover {
 
 #fixoFooter .xans-layout-logobottom {
     float: left;
-    padding: 0px 60px 0 0;
+    padding: 25px 60px 0 0;
     text-align: center;
 }
 
 #fixoFooter .xans-layout-footer #address {
-    padding: 20px 0 5px;
+    padding: 40px 0 5px;
     color: #b6b6b6;
-    font-size: 16px;
+    font-size: 17px;
     line-height: 17px;
 }
 
@@ -1003,6 +1040,495 @@ address p.design,address p.design a {
 .ft_bx_social {
     padding: 20px 0 5px;
 }
+
+
+.contact-icon {
+    color: #818285;
+    font-size: 38px;
+    position: absolute;
+}
+
+.contact-r-detail {
+	float:left;
+	margin-left: 55px;
+}
+
+
+
+.xans-product-detail {
+    position: relative;
+    padding: 80px 0 30px;
+	margin: 0 0 50px;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.product-tabs {
+	font-size: 18px;
+	margin-bottom: 100px;
+}
+
+
+.product-tabs .nav-tabs {
+    border-bottom-color: #2c2c2c;
+}
+
+.product-tabs .nav-tabs>li>a {
+    margin-right: 0px;
+    border-radius: 0px 0px 0 0;
+	border-color: #eee #eee #2c2c2c #ddd;
+	border-top: 2px solid #eee;
+}
+
+.product-tabs .nav-tabs>li:first-child>a {
+	border-left: 2px solid #eee;
+}
+
+.product-tabs .nav-tabs>li:last-child>a {
+	border-right: 2px solid #eee;
+}
+
+
+.product-tabs .nav-tabs>li.active>a, .product-tabs .nav-tabs>li.active>a:focus {
+	border: 1px solid #2c2c2c;
+	border-bottom: 2px solid #fff;
+	font-weight: 700;
+}
+
+.product-tabs .nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    background-color: #fff; 
+}
+
+.product-tabs .nav-tabs>li>a:hover {
+   
+}
+
+.product-tabs .tab-content {
+	margin-top: 25px;
+	padding: 0 25px;
+}
+
+.xans-product-detail .infoArea {
+    float: left;
+}
+
+.xans-product-detail .infoArea h3 {
+    padding: 0 0 0px 10px;
+    font-size: 20px;
+    color: #111;
+	font-weight: 600;
+    word-break: break-all;
+    letter-spacing: 1px;
+}
+
+.xans-product-detail .infoArea h3 span {
+    font-weight: normal;
+    font-size: 12px;
+}
+
+.xans-product-detail .infoArea .icon {
+    padding: 0 0 0 10px;
+}
+
+.xans-product-detail .infoArea .icon img {
+    margin: 0 5px 10px 0;
+    vertical-align: middle;
+}
+
+.xans-product-detail .infoArea p.delivery {
+    padding: 10px 0 20px;
+}
+
+.xans-product-detail .infoArea .guideArea {
+    position: relative;
+}
+
+.xans-product-detail .infoArea .guideArea .info {
+    margin: 7px 0 0;
+    padding: 8px 0 0 11px;
+    border-top: 1px solid #e8e8e8;
+    color: #757575;
+}
+
+
+.xans-product-detail .infoArea .sizeGuide a:hover {
+    text-decoration: none;
+}
+
+.xans-product-detail .infoArea .color {
+    overflow: hidden;
+    margin: 4px 0 10px 0;
+}
+
+.xans-product-detail .infoArea .chips {
+    float: left;
+    width: 14px;
+    height: 14px;
+    margin: 0 3px 0 0;
+    border: 1px solid #e3e3e3;
+    font-size: 0;
+    line-height: 0;
+}
+
+.xans-product-detail .infoArea .infoTxt {
+    border-bottom: 1px solid #e8e8e8;
+    padding: 7px 0 7px 9px;
+    padding-bottom: 25px;
+    margin-bottom: 15px;
+    color: #999;
+    font-size: 17px;
+    line-height: 1.8;
+}
+
+.xans-product-detail .p-detail {
+	font-size: 18px;
+	padding: 0 0 0px 10px;
+}
+
+.xans-product-detail .product-tag {
+	margin-top: 20px;
+	font-weight: 600;
+	font-size: 16px;
+	border-bottom: 1px solid #e8e8e8;
+    padding: 7px 0 7px 9px;
+    padding-bottom: 25px;
+}
+
+.xans-product-detail .product-color {
+	margin-top: 15px;
+	font-weight: 600;
+	font-size: 16px;
+}
+
+.xans-product-detaildesign tr:first-child {
+    display: none;
+}
+
+.xans-product-detail .infoArea table {
+    border: 0;
+    font-size: 11px;
+}
+
+.xans-product-detail .infoArea th {
+    font-weight: normal;
+    color: #555;
+    width: 115px;
+    padding: 7px 0 7px 9px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.xans-product-detail .infoArea td {
+    padding: 7px 10px 7px 0;
+    vertical-align: top;
+}
+
+.xans-product-detail .infoArea td input {
+    height: 22px;
+    color: #555;
+    border: 1px solid #bcbcbc;
+}
+
+.xans-product-detail .infoArea td select {
+    width: 100%;
+    height: 24px;
+    font-size: 12px;
+    color: #353535;
+}
+
+.xans-product-detail .infoArea td #delivery_cost_prepaid {
+    margin: 0 0 5px;
+}
+
+.xans-product-detail .infoArea td .inputWrap {
+    display: block;
+    padding: 0 4px;
+    border: 1px solid #c5c5c5;
+    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
+    background: #fff;
+}
+
+.xans-product-detail .infoArea td .inputWrap input {
+    width: 100%;
+    border: 0;
+    font-size: 11px;
+    line-height: 22px;
+}
+
+.xans-product-detail .infoArea td.social {
+}
+
+.xans-product-detail .infoArea td.social img {
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.xans-product-detail .infoArea td .sale {
+    text-decoration: line-through;
+}
+
+.xans-product-detail .infoArea td .period {
+    display: block;
+    margin: 7px 0 0;
+    font-size: 11px;
+    color: #353535;
+}
+
+.xans-product-detail .infoArea td .mileage li {
+    line-height: 1.7em;
+}
+
+.xans-product-detail .infoArea td .quantity {
+    position: relative;
+    display: block;
+}
+
+.xans-product-detail .infoArea td .quantity input {
+    width: 30px;
+    height: 18px;
+    border: 1px solid #bcbcbc;
+}
+
+.xans-product-detail .infoArea td .quantity .QuantityUp {
+    position: absolute;
+    left: 32px;
+    top: 0;
+}
+
+.xans-product-detail .infoArea td .quantity .QuantityDown {
+    position: absolute;
+    left: 32px;
+    bottom: 0;
+}
+
+.xans-product-detail .infoArea td .delivery input {
+    border: 0;
+}
+
+.xans-product-detail .infoArea td .delivery label {
+    margin: 0 30px 0 0;
+}
+
+.xans-product-detail .infoArea td img.qrcode {
+    border: 1px solid #e1e1e1;
+}
+
+.xans-product-detail .infoArea td.fileInfo {
+    color: #757575;
+}
+
+.xans-product-detail .infoArea td.fileInfo input {
+    width: 288px;
+    border: 1px solid #c5c5c5;
+    border-right: 1px solid #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
+}
+
+.xans-product-detail .infoArea td.fileInfo .infoDesc {
+    margin: 0 0 10px 0;
+}
+
+.xans-product-detail .infoArea td.fileInfo li {
+    margin: 4px 0 0;
+    color: #757575;
+    font-size: 11px;
+}
+
+.xans-product-detail .infoArea td.fileInfo li img {
+    vertical-align: bottom;
+}
+
+.xans-product-detail .delv_price_B strong {
+    font-weight: normal;
+}
+
+.xans-product-detail .btnTooltip {
+    display: inline-block;
+    position: relative;
+    z-index: 10;
+    vertical-align: middle;
+    *display: inline;
+    *zoom:1;}
+
+.xans-product-detail .infoArea .xans-product-option tr th {
+    padding: 7px 0 7px 9px;
+}
+
+.xans-product-detail .infoArea .xans-product-option tr td {
+    padding: 7px 10px 7px 0;
+}
+
+.xans-product-detail .infoArea .xans-product-option tr:first-child th {
+    padding-top: 14px;
+    border-top: 1px solid #e8e8e8;
+}
+
+.xans-product-detail .infoArea .xans-product-option tr:first-child td {
+    padding-top: 14px;
+    border-top: 1px solid #e8e8e8;
+}
+
+.xans-product-detail .infoArea .xans-product-addoption td .inputWrap {
+    display: inline-block;
+    width: 280px;
+}
+
+.xans-product-detail .infoArea .xans-product-addoption .txtByte {
+    font-size: 11px;
+    vertical-align: middle;
+    letter-spacing: -1px;
+}
+
+.xans-product-detail .infoArea .xans-product-addoption .txtByte strong {
+    color: #000;
+}
+
+.xans-product-action {
+    padding: 30px 0 0;
+    border-top: 1px solid #e8e8e8;
+    text-align: center;
+}
+
+.xans-product-action .btnArea {
+    overflow: hidden;
+}
+
+.xans-product-action .btnArea a {
+    display: inline-block;
+    font-size: 14px;
+    letter-spacing: normal;
+    line-height: normal;
+    font-weight: 700;
+    color: #222;
+    letter-spacing: 2px;
+    padding: 10px 0;
+    margin: 0 0 0 20px;
+    border: 1px solid #c4c4c4;
+    text-decoration: none;
+    width: 136px;
+}
+
+.xans-product-action .btnArea a:hover {
+    border: 1px solid #666;
+    color: #666;
+}
+
+.xans-product-action .btnArea a.first {
+    border: 1px solid #111;
+    background: #111;
+    color: #fff;
+    width: 176px;
+    margin: 0;
+}
+
+.xans-product-action .btnArea a.first:hover {
+    border: 1px solid #666;
+    background: #666;
+}
+
+.xans-product-action .btnArea span {
+    display: inline-block;
+    font-size: 12px;
+    letter-spacing: normal;
+    line-height: normal;
+    font-weight: 700;
+    color: #000;
+    letter-spacing: 2px;
+    padding: 12px 0;
+    margin: 0 8px;
+    border: 1px solid #c4c4c4;
+    background: #c4c4c4;
+    text-decoration: none;
+    width: 140px;
+}
+
+.xans-product-multioption {
+    border-top: 1px solid #ebebeb;
+}
+
+.xans-product-multioption div {
+    border-top: 1px solid #ebebeb;
+    margin: 10px 0 0;
+}
+
+.xans-product-multioption p {
+    padding: 10px 0;
+    text-align: right;
+}
+
+.xans-product-detail .eventArea {
+    color: #353535;
+}
+
+.xans-product-detail .eventArea h3 {
+    padding: 0 0 0 9px;
+    border-top: 1px solid #e8e8e8;
+    border-bottom: 1px solid #e8e8e8;
+    font-size: 12px;
+    color: #000;
+    line-height: 39px;
+    display: none;
+}
+
+.xans-product-detail .eventArea .event {
+    color: #353535;
+    line-height: 18px;
+}
+
+.xans-myshop-benefit {
+    margin: 30px 0;
+    border: 1px solid #d6d4d4;
+}
+
+.xans-myshop-benefit .thanks {
+    padding: 7px 0 11px 9px;
+    border-bottom: 1px solid #e8e7e7;
+    color: #353535;
+    background: #fbfbfb;
+    text-align: left;
+}
+
+.xans-myshop-benefit .thanks img {
+    margin: -1px 6px 0 0;
+    vertical-align: middle;
+}
+
+.xans-myshop-benefit .myInfo {
+    overflow: hidden;
+    padding: 9px 10px 10px 100px;
+}
+
+.xans-myshop-benefit .myInfo p {
+    color: #757575;
+    line-height: 18px;
+    text-align: left;
+}
+
+.xans-myshop-benefit .myThumb {
+    float: left;
+    margin: 0 0 0 -91px;
+}
+
+.xans-myshop-benefit .myThumb img {
+    max-width: 70px;
+}
+
+.xans-myshop-benefit .member {
+    margin: 2px 0 19px;
+    text-align: left;
+}
+
+.xans-myshop-benefit .member strong {
+    color: #353535;
+}
+
+.xans-myshop-benefit .member em {
+    font-style: normal;
+    color: #353535;
+}
+
+
 
 @media (max-width: 767px) {
 	
